# Y

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  sbom.spdx.json
api/: .dockerignore  Dockerfile  learner.py  learner_adapter.py  main.py  parser.py  pyproject.toml  salvage.py  speech.py  speech_assets.lock.json  teacher.py  transcription.py  validator.py
api/prompts/: primitives.md  system.md
api/prompts/examples/: binary_search.md  bio_cell.md  chem_benzene.md  cs_dfs.md  math_pythagoras.md  newton.md  physics_inclined.md  vector_sum.md
api/scripts/: benchmark_adapter.py  dump_sse.py  generate_sbom.py  prefetch_speech.py  smoke_demos.py  smoke_drawpart.py  smoke_lesson.py  smoke_vision.py  test_parser.py  test_salvage.py  test_teacher.py
api/tests/: test_api.py  test_chat.py  test_learner.py  test_openai_teacher.py  test_speech.py  test_streaming.py
deploy/: README.md  modal_app.py  modal_train_learner.py
docs/: architecture.md  codex-decision-log.md  kaggle_writeup.md  submission_checklist.md  video_script.md
models/: Modelfile.y-gemma4  README.md
schema/: primitives.json
training/: _build_notebook.py  build_learner_corpus.py  embedding.py  evaluate_learner.py  prepare_dataset.py  train_learner_adapter.py  unsloth-training-v1.ipynb  unsloth-training.ipynb  unsloth_train.ipynb
web/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/scripts/: test_sse_parser.mjs
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/app/: page.tsx
web/src/components/: ChatPanel.test.tsx  ChatPanel.tsx  CheckpointCard.tsx  EducatorPanel.tsx  LearnerPanel.test.tsx  LearnerPanel.tsx  ScrollLine.tsx  Toolbar.tsx  Whiteboard.tsx
web/src/lib/: api.ts  chat.test.ts  chat.ts  katex.ts  layout.ts  learner-state.test.ts  learner-state.ts  lesson-player.ts  narration-queue.test.ts  narration-queue.ts  renderer.ts  rough-svg.ts  sanitize.ts  svg.ts  tts.ts  types.ts  wav-recorder.ts
web/src/test/: setup.ts
