[project]
name = "y-api"
version = "0.1.0"
description = "AI Learning Companion - Phase 0 API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "ollama>=0.4",
    "pydantic>=2.9",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.1",
    "pillow>=11",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "httpx>=0.27",
]
