[project]
name = "y-api"
version = "0.1.0"
description = "AI Learning Companion API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "ollama>=0.4",
    "openai>=2.0",
    "pydantic>=2.9",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.1",
    "pillow>=11",
    "httpx>=0.28.1",
    "numpy>=2.0",
    "torch>=2.5",
    "safetensors>=0.5",
]

[project.optional-dependencies]
# Pull these in when serving the "Cloud (Gemma 4 31B)" toolbar option:
#   uv pip install -e .[cloud]
cloud = [
    "google-genai>=0.3.0",
]
speech = [
    "moonshine-voice==0.0.69",
]
stt = [
    "moonshine-voice==0.0.69",
]
training = [
    "datasets>=3.0",
    "sentence-transformers>=3.4",
    "einops>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.uv.sources]
# On Windows, PyPI's torch wheel is CPU-only, so pull torch from PyTorch's
# CUDA index there. cu130 is the build that ships Blackwell (RTX 50-series,
# sm_120) win_amd64 wheels and matches a CUDA 13.x driver. Linux/macOS keep
# the default index (Linux CUDA arrives via torch's own nvidia-* deps).
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
